# kg-conformance

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: budget.py  claude_client.py  config.py  demo.py  grounding.py  main.py  models.py  observability.py  validation.py
app/demo_data/: demo.json  demo_input.ttl  demo_input.txt
docs/: workbook.arm.json
scripts/: generate_demo.py
tests/: conftest.py  test_conformance.py  test_demo.py  test_grounding.py  test_health.py  test_observability.py  test_validate_contract.py  test_validate_stub.py  test_validation_mapping.py
tests/fixtures/: conforming_data.ttl  grounding_data.ttl  grounding_source.txt  shapes.ttl  violating_data.ttl
