# Project metadata and dependencies.
# Versions are intentionally left open here. Pin them after the first
# `pip install -e ".[dev]"` and a green pytest, per the project workflow.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-conformance"
version = "0.3.0"
description = "Conformance and source-grounding checks for LLM-extracted knowledge graphs, served as an HTTP API."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "rdflib",
    "pyshacl",
    "anthropic",
    "pydantic>=2",
    "structlog",
    "tenacity",
]

[project.optional-dependencies]
observability = [
    "azure-monitor-opentelemetry",
    "opentelemetry-instrumentation-fastapi",
]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.setuptools.package-data]
# Ship the keyless /demo example with the installed package, so the container
# (which runs from site-packages, not the source tree) can serve it.
app = ["demo_data/*.json", "demo_data/*.ttl", "demo_data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
